@@ -4,6 +4,10 @@ the top of this file before committing any changes.
 
 Al
 ------------------------------------------------------------------------------
+Tue Oct 13 18:07 BST 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* Optimised code size with careful use of register variables
+
 Tue Oct 13 12:09 BST 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* Removed the blocked signal element from task structure, and
